--- a/Frontend/my-app/src/App.css
+++ b/Frontend/my-app/src/App.css
@@ -9,4 +9,10 @@
   justify-content: space-between;
   flex-direction:column;
 }
+.add_btn{
+  text-align:right;
+}
+.container{
+  overflow:auto
+}
 
