--- a/Frontend/my-app/src/App.css
+++ b/Frontend/my-app/src/App.css
@@ -15,4 +15,10 @@
 .container{
   overflow:auto
 }
+.center-spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* 100% of the viewport height */
+}
 
